bug segmentation fault unfix

--- a/src/hudar_core/CMakeLists.txt
+++ b/src/hudar_core/CMakeLists.txt
@@ -2,14 +2,15 @@ cmake_minimum_required(VERSION 3.8)
 project(hudar_core)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic)
+  
 endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(std_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(sensor_msgs REQUIRED)
 find_package(OpenCV REQUIRED)
+find_package(cv_bridge REQUIRED)
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
@@ -23,11 +24,11 @@ if(BUILD_TESTING)
 endif()
 
 
-add_executable(radar_node src/main.cpp)
-ament_target_dependencies(radar_node rclcpp OpenCV std_msgs)
+add_executable(radar_front src/radar_front.cpp)
+ament_target_dependencies(radar_front rclcpp OpenCV std_msgs sensor_msgs cv_bridge)
 
 install(TARGETS
-  radar_node
+  radar_front
   DESTINATION lib/${PROJECT_NAME}
 )
 
