--- a/src/hudar_camera/CMakeLists.txt
+++ b/src/hudar_camera/CMakeLists.txt
@@ -12,6 +12,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(OpenCV 4 REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(sensor_msgs REQUIRED)
 if(BUILD_TESTING)
