--- a/src/hudar_core/CMakeLists.txt
+++ b/src/hudar_core/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
-find_package(OpenCV REQUIRED)
+find_package(OpenCV 4 REQUIRED)
 find_package(cv_bridge REQUIRED)
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
